Fix styling for workshops list page   - Wrap workshops list to next line when at half width   - create minimum height for when the vh gets too small

--- a/ui/src/app/main/workshops-list/workshops-list.component.scss
+++ b/ui/src/app/main/workshops-list/workshops-list.component.scss
@@ -1,44 +1,60 @@
 @import  '../../../styles';
 @import '../../../mixins';
 
-.workshop-list {
-  &__calendar-container {
+.workshops {
+  height: 100vh;
+  min-height: 60rem;
+  display: flex;
+  align-items: center;
+
+  @include half-desktop {
+    flex-direction: column;
+    height: 120rem;
+  }
+
+  &__calendar {
     width: 60%;
     height: 100%;
     display: flex;
-    align-items: center;
     justify-content: center;
-    background-color: white;
+    align-items: center;
   }
 
   &__events {
-    color: $off-white;
-    width: 40%;
-    height: 100%;
     display: flex;
     flex-direction: column;
+    height: 95vh;
+    min-height: 55rem;
+    width: 85%;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
     align-items: center;
 
-    &__header {
-      margin-top: 1rem;
+    @include half-desktop {
+      margin-top: 0;
     }
 
-    &__list {
-      margin-top: 2rem;
-      width: 90%;
-
-      display: flex;
-      flex-direction: column;
-
-      h2 {
-        align-content: center;
-        justify-content: center;
-        text-align: center;
+    &__header {
+      @include half-desktop {
+        margin-bottom: 2rem;
       }
     }
 
-    &__item {
+    &__items {
+      height: 85vh;
+      min-height: 50rem;
+      overflow-y: scroll;
 
+      &__item {
+        text-align: center;
+
+        &__header {
+          margin-top: 1rem;
+          margin-bottom: 0.5rem;
+        }
+      }
     }
   }
+
 }
+
